--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
         versions:
           - otp: "24"
             elixir: "1.14"
+          - otp: "25"
+            elixir: "1.18"
           - otp: "26"
             elixir: "1.18"
           - otp: "27"
